# pixura-contracts

./: .gitignore  LICENSE  Makefile  README.md  chanterelle.json  cliquebait.json  default.nix  docker-compose.yaml  flake.nix  migration.json  package.json  package.yaml  packages.dhall  pixura-contracts.cabal  shell.nix  spago.dhall  stack.yaml
contracts/: chanterelle.json
contracts/abis/: Autoglyphs.json  ERC20Metadata.json  ERC20Proxy.json  ERC721Full.json  ISuperRare.json  KnownOriginDigitalAsset.json  MakersplaceV2.json  Medianizer.json  OrderValidator.json  PixuraNFT.json  Rarible.json  WETH9.json  ZRXToken.json
contracts/migrations/: 1_nft_contract_generator_migration.js  3_superrare_v2_migration.js  4_superrare_auction_marketplace_migration.js  __1_nft_contract_generator_migration.js  __2_marketplace_migration.js
contracts/no-gen-abis/: Forwarder.json
contracts/solidity/: ERC20CappedMetadata.sol  ERC20MintableMetadata.sol  ERC721Market.sol  IERC721Creator.sol  ISuperRare.sol  MaybeSendValue.sol  PixuraNFTContractGenerator.sol  SendValueOrEscrow.sol  SendValueProxy.sol  SuperRareMarketAuction.sol  SuperRareMarketAuctionV1_1.sol  SuperRareMarketAuctionV2.sol  SuperRareV2.sol  Test1.sol  TestAssertFailOnPay.sol  TestAssertFailOnPayHack.sol  TestExpensiveWallet.sol  TestRequireFailOnPay.sol  TestRequireFailOnPayHack.sol  TestRevertOnPay.sol  TestRevertOnPayHack.sol  Whitelist.sol
contracts/src/: ISendValueProxy.sol  ISupeRare.sol  ISuperRareAuctionHouseV2.sol  ISuperRareBazaar.sol  ISuperRareMarketplace.sol  MaybeSendValue.sol  Payments.sol  SendValueProxy.sol  SuperRareAuctionHouse.sol  SuperRareBazaar.sol  SuperRareLegacy.sol  SuperRareMarketAuctionV2.sol  SuperRareMarketplace.sol  SuperRareRoyaltyRegistry.sol  SuperRareTokenCreatorRegistry.sol  TestAssertFailOnPay.sol  TestExpensiveWallet.sol  TestRevertOnPay.sol
contracts/test/: auction-merge.ts  multi-offers.ts
contracts/v4/: chanterelle.json
contracts/v5/: chanterelle.json
contracts/v6/: chanterelle.json
contracts/wip/: SuperRareAuction.sol  SuperRareAuctionV2.sol
data/: ERC721.json  ERC721Market.json  Pixura.json  SimpleStorage.json  SupeRare.json
hs-contracts/: package.yaml
purs-contracts/test/: Main.purs
src/: Main.purs
truffle/: .gitignore  package-lock.json  package.json  truffle.js
truffle/contracts/: 0x.sol  0xExtentions.sol  ERC20.sol  ERC20CappedMetadata.sol  ERC20Metadata.sol  ERC20MintableMetadata.sol  ERC721Creator.sol  ERC721Market.sol  ERC721Metadata.sol  IERC721Creator.sol  MaybeSendValue.sol  Operated.sol  PixuraDemo.sol  PixuraFungibleToken.sol  PixuraNFT.sol  PixuraNFTContractGenerator.sol  SendValueOrEscrow.sol  SuperRare.sol  SuperRareMarketAuction.sol  SuperRareMarketAuctionV1_1.sol  SuperRareSender.sol  (+4 more)
(+203 files in other folders)
