name:                pixura-contracts
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pixura/pixura-contracts#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Crain
maintainer:          craincharles@gmail.com
copyright:           Pixura
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Pixura.Contracts.ERC721
                       Pixura.Contracts.ERC721Old
                       Pixura.Contracts.ERC721Market
                       Pixura.Contracts.ERC20
                       Pixura.Contracts.PixuraNFT
                       Pixura.Contracts.PixuraNFTContractGenerator
                       Pixura.Contracts.ZeroX.EtherToken
                       Pixura.Contracts.ZeroX.ERC20Proxy
                       Pixura.Contracts.ZeroX.ERC721Proxy
                       Pixura.Contracts.ZeroX.Exchange
  build-depends:       base >= 4.7 && < 5
                     , generics-sop
                     , web3
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
                     , BangPatterns
                     , ConstraintKinds
                     , DataKinds
                     , DefaultSignatures
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveLift
                     , DeriveTraversable
                     , DerivingStrategies
                     , EmptyCase
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , NamedFieldPuns
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , TypeOperators

source-repository head
  type:     git
  location: https://github.com/Pixura/pixura-contracts
